# Aether-Studio

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  VID-ED.md  package.json
D:/Privantrix-AI-OS/AI-OS/: AGENTS.md  CLAUDE.md  LICENSE  README.md  bootstrap.py  main.py  pyproject.toml  requirements.txt
D:/Privantrix-AI-OS/AI-OS/docs/: ARCHITECTURE.md
D:/Privantrix-AI-OS/AI-OS/scripts/: health_check.py
D:/Privantrix-AI-OS/AI-OS/src/: config.py  database.py  hardware.py  lmstudio.py  logging.py  memory.py  planner.py  router.py
D:/Privantrix-AI-OS/AI-OS/tests/: __init__.py  test_basic.py
ai-runtime/: pyproject.toml
docs/architecture/: README.md  SYSTEM_OVERVIEW.md  adr-001-local-first.md  adr-002-tech-stack.md  adr-003-agentic-ai.md  adr-004-timeline-json.md  adr-005-hardware-adaptive.md  adr-006-plugin-security.md  adr-007-creative-director.md  adr-008-offline-first.md
src-tauri/: Cargo.toml
src/renderer/: package.json  tsconfig.json  vite.config.ts
src/shared/: index.ts  package.json  tsconfig.json
src/shared/constants/: index.ts
src/shared/types/: index.ts
src/shared/utils/: index.ts
stitch_vid_ed_ai_video_os/luminous_editorial/: DESIGN.md
stitch_vid_ed_ai_video_os/model_manager/: code.html
stitch_vid_ed_ai_video_os/vid_ed_backend/: requirements.txt
stitch_vid_ed_ai_video_os/vid_ed_backend/core/: __init__.py  job_queue.py  llm_client.py  security.py
stitch_vid_ed_ai_video_os/vid_ed_backend/schemas/: __init__.py  creator_profile.py  hardware_profile.py  orchestrator.py  timeline.py  validator.py  video_cache.py
stitch_vid_ed_ai_video_os/vid_ed_creative_studio_editor/: code.html
stitch_vid_ed_ai_video_os/vid_ed_home_dashboard/: code.html
