[project]
name = "vid-ed-ai-runtime"
version = "0.1.0"
description = "AI Runtime for VID-ED - Local-first AI video production agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VID-ED Team", email = "team@vid-ed.com"}
]
keywords = ["video", "ai", "editing", "local-first", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.2.0",
    "scipy>=1.12.0",
    "onnxruntime>=1.16.0",
    "onnxruntime-gpu>=1.16.0; sys_platform != 'darwin'",
    "transformers>=4.37.0",
    "tokenizers>=0.15.0",
    "sentence-transformers>=2.3.0",
    "whisper>=1.0.0",
    "llama-cpp-python>=0.2.39",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "accelerate>=0.26.0",
    "bitsandbytes>=0.42.0; sys_platform != 'darwin'",
    "optimum>=1.16.0",
    "lancedb>=0.5.0",
    "sqlite-utils>=3.36",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "orjson>=3.9.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0; sys_platform != 'darwin'",
    "appdirs>=1.4.4",
    "cachetools>=5.3.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
research = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "playwright>=1.41.0",
    "trafilatura>=1.7.0",
]

[project.urls]
Homepage = "https://vid-ed.com"
Repository = "https://github.com/vid-ed/vid-ed"
Documentation = "https://docs.vid-ed.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vid_ed_ai"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "ARG", "DTZ", "ERA", "PD", "PGH", "PLC", "PLE", "PLR", "PLW", "PT", "PYI", "RUF", "TCH", "TRY"
]
ignore = ["PLR0913", "PLR0912", "PLR0915"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[project.scripts]
vid-ed-ai = "vid_ed_ai.cli:app"
