[package]
name = "vid-ed"
version = "0.1.0"
edition = "2021"
authors = ["VID-ED Team"]
description = "Local-First AI Video Production Operating System"
license = "MIT"
repository = "https://github.com/vid-ed/vid-ed"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "fs-all", "path-all", "dialog-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
notify = "6.1"
image = "0.24"
ffmpeg-next = "7.0"
dirs = "5.0"
once_cell = "1.19"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
crossbeam-channel = "0.5"
rayon = "1.8"
memmap2 = "0.9"
sysinfo = "0.30"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
